# logpyclaw

./: .env.example  .gitignore  A2A.md  AgentClaw.icns  CLAUDE.md  CONFIG_SCHEMA.md  INDEX.md  LICENSE  NEW_AI_READ_THIS_FIRST.md  PLAN.md  QUICK_REFERENCE.md  README.md  STYLEBOOK.md  agentclaw.db  agentclaw.sh  agents.yaml  app.py  app_new.py  bericht-grok.md  dump.rdb  linkedin_post_1.md  linkedin_post_1_en.md  linkedin_post_2_timestamps.md  mac_mail_mcp.py  main_app.py  make_icon.py  pyproject.toml  pytest.ini  requirements.txt  requirements_new.txt  setup.py  start.sh  test_prompt_martin_bienen.md
_archive/: app_flask_legacy.py
api/: __init__.py  activity.py  agents.py  backup.py  chat.py  comfyui.py  content.py  health.py  inbox.py  ltx_batch.py  m2m.py  memory.py  providers.py  skills.py  stats.py  tasks.py  temporal.py  themes.py  tools.py  transcribe.py  tts.py  upload.py  watchdogs.py  web_bridge.py
backend/: app.py  config.py
config/: __init__.py  logging_config.py  settings.py
core/: __init__.py  a2a_protocol.py  background.py  causal_dilation_clock.py  config.py  dispatch_rules.py  errors.py  fastpath.py  flask_app.py  intent_detector.py  llm.py  llm_stream.py  memory.py  model_capabilities.py  operator_context.py  routing.py  scheduler.py  security.py  skills_registry.py  state.py  task_list.py  temporal_policy.py  thread_pools.py  time_provider.py  wiki_context.py
docs/: A2A.md  BUG-v189-nicegui-core-loop.md  DESIGN.md  INDEX.md  LOGPYCLAW-EXPLAINED.md  MESH_VISION.md  PROTOCOL.md  QUICK_REFERENCE.md  TODO_PHASE6_TEMPORAL.md  dream.md  whatsapp-sync.md
experiments/: dragon-results.json  dragon.py  dragon2-results.json  dragon2.py  dragon3-results.json  dragon3.py  dragon4-results.json  dragon4.py  dragon5-results.json  dragon5.py  eval-section.md  evaluation-draft.md
frontend/: award.html  index.html  logpy-grid.html
keys/: signer-2026-05-26T17-10-34.pub
lab/: __init__.py
mac_mail/: __init__.py  skill.py
routes/: backup.py  inbox.py  providers.py  stats.py  tts.py  upload.py  websocket.py
scripts/: cleanup.sh  load_claude_memory.py  migrate_images_to_files.py  test_precommit.sh
services/: __init__.py  agent_service.py  chat_service.py  event_service.py  heartbeat_service.py  m2m_service.py  task_service.py  watchdog_service.py  whatsapp_watcher.py
skills/: __init__.py  base.py  chrome_browser.py  coding_skill.py  comfyui.py  file_skill.py  gmail_skill.py  hacker_news.py  linkedin_skill.py  prompt_optimize.py  registry.py  screenshot_skill.py  tagesschau.py  telegram_skill.py  transcription_skill.py  triggers.py  url_fetch.py  web_search.py  whatsapp.py  wiki_read.py  wikipedia.py  youtube_skill.py
static/: about.html  (+1 more)
(+178 files in other folders)
