[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "logpyclaw-v3"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "pqcrypto>=0.4",                # ML-DSA-65 (FIPS 204) für Audit-Log-Signatur
    "apscheduler>=3.10",            # Daily Dream-Cycle, RSS-Fetcher
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: Zeilenlänge via Formatter geregelt.
# E701: kompakte Einzeiler (`if x: y`) sind bewusster Codebase-Stil.
ignore = ["E501", "E701"]

[tool.ruff.lint.per-file-ignores]
# app.py lädt .env via load_dotenv() VOR den Modul-Imports — Reihenfolge ist gewollt.
"backend/app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
